change the swagger specification and subsequent scripts
