# hexagonal-flask-app/app/adapters/rest/flask_server/swagger_server/controllers/phyact_pred_controller.py
@@ -10,6 +10,7 @@ from swagger_server.models.predict_physical_act_response_body201 import PredictP
 from swagger_server.models.predict_physical_act_response_body400 import PredictPhysicalActResponseBody400  # noqa: E501
 from swagger_server.models.predict_physical_act_response_body500 import PredictPhysicalActResponseBody500  # noqa: E501
 from swagger_server import util
+USER_ID = "user_0001"
 
 db_sp = MySQLAdapter()
 phyActService = PhysicalActImpl(db_sp)
@@ -26,7 +27,15 @@ def api_v1_physical_act_prediction_post(body):  # noqa: E501
     """
     if connexion.request.is_json:
         data = phyActData(**connexion.request.get_json())
+        
+    if USER_ID is not None:
+        data.uid = USER_ID
     
-    phyActService.predict_physical_activities(data)
+    activity_list = phyActService.predict_physical_activities(data)
     
-    return 'do some magic!'
+    output = {
+        "prediction": activity_list,
+        "status": "prediction success"
+    }
+    
+    return output, 201
