# hexagonal-flask-app/app/adapters/rest/flask_server/swagger_server/swagger/swagger.yaml
@@ -34,13 +34,47 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/predict_physical_act_response_body_400'
+                $ref: '#/components/schemas/physical_act_response_body_400'
         "500":
           description: Internal server error
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/predict_physical_act_response_body_500'
+                $ref: '#/components/schemas/physical_act_response_body_500'
+      x-openapi-router-controller: swagger_server.controllers.phyact_pred_controller
+    get:
+      tags:
+      - phyact_pred
+      summary: get the predicted physical activities
+      description: Optional extended description in CommonMark or HTML.
+      operationId: api_v1_physical_act_prediction_get
+      parameters:
+        - name: user_id
+          in: query
+          description: user id of the user
+          required: true
+          schema:
+            type: integer
+            format: int64
+      responses:
+        "200":
+          description: A JSON array of user names
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/get_physical_act_response_body_201'
+        "400":
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/physical_act_response_body_400'
+        "500":
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/physical_act_response_body_500'
       x-openapi-router-controller: swagger_server.controllers.phyact_pred_controller
 components:
   schemas:
@@ -129,7 +163,7 @@ components:
         - walking
         - running
         status: prediction successfull
-    predict_physical_act_response_body_400:
+    physical_act_response_body_400:
       required:
       - detail
       - status
@@ -153,7 +187,7 @@ components:
           type: string
           description: detail of the error
           example: prediction failed
-    predict_physical_act_response_body_500:
+    physical_act_response_body_500:
       required:
       - detail
       - status
@@ -177,4 +211,26 @@ components:
           type: string
           description: detail of the error
           example: internal server error
+    get_physical_act_response_body_201:
+      required:
+      - prediction
+      - status
+      type: object
+      properties:
+        prediction:
+          type: array
+          description: prediction of the physical activity
+          example:
+          - walking
+          - running
+        status:
+          type: string
+          description: status of the prediction
+          example: prediction successfull
+      description: response body for the predict physical activity
+      example:
+        prediction:
+        - walking
+        - running
+        status: prediction successfull
 
